bk_ida/gccida/c2/redirect_edge_and_branch
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1305:4: error: expected ';' after expression
rtx v33; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1305:5: error: use of undeclared identifier 'v33'
rtx v33; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1310:4: error: expected ';' after expression
rtx v38; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1310:5: error: use of undeclared identifier 'v38'
rtx v38; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1316:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1316:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1318:4: error: expected ';' after expression
rtx v46; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1318:5: error: use of undeclared identifier 'v46'
rtx v46; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1320:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1320:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1323:4: error: expected ';' after expression
rtx v51; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1323:5: error: use of undeclared identifier 'v51'
rtx v51; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1326:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1326:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1327:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1327:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1345:12: error: expected ';' after expression
v9 = ( rtx)end[2]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1347:33: error: expected expression
v9 = single_set_2( end, *( rtx *)&end[2]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/cfgrtl.c:1354:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v28 = ( unsigned __int16 *)target->head[1]; 
                           ^~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/redirect_edge_and_branch/src/obj/cfgrtl.o] Error 1
